--- a/.github/workflows/action_magisk_patche.yml
+++ b/.github/workflows/action_magisk_patche.yml
@@ -24,19 +24,17 @@ jobs:
           BUILD_TIME=$(TZ=Asia/Shanghai date +"%m%d%H%M")
           echo "BUILD_TIME=$BUILD_TIME" >> $GITHUB_ENV
 
-      - name: 提取镜像
+      - name: 修补镜像
         run: |
           cd ~
-          git clone https://github.com/xyazzrany/Magisk_patche.git Magisk
-          cd Magisk
           aria2c -s 10 -x 10 -d . -o boot.img "${{ github.event.inputs.boot_url }}"
           mkdir done
-          ./boot.sh
-          cd ${{ github.workspace }}
-          touch info.md
-          echo "提交日期：$(TZ=Asia/Shanghai date '+%Y-%m-%d %H:%M:%S')" >> info.md
-          echo "boot 下载直链：${{ github.event.inputs.boot_url }}" >> info.md
-          
+          echo 正在修补
+          wget https://github.com/xyazzrany/Magisk_patche/blob/main/boot_patch.sh %% chmod +x boot_patch.sh
+          ./boot_patch.sh ./boot.img
+          echo "done"
+          mv new-boot.img done/
+
       - name: 上传镜像
         uses: ncipollo/release-action@v1.12.0
         with:
